--- a/wpfQueue/MainWindow.xaml
+++ b/wpfQueue/MainWindow.xaml
@@ -7,14 +7,19 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="605" Width="716">
     <Canvas>
-        <ListView x:Name="lvItensSingleCore" Height="143" Width="338" Canvas.Left="10" Canvas.Top="10" />
-        <ListView x:Name="lvItensMultiCore" Height="143" Width="338" Canvas.Left="353" Canvas.Top="10" />
-        <TextBlock x:Name="tbRealizadoSingleCore" Canvas.Left="13" Canvas.Top="158" Text="0" TextWrapping="Wrap" Width="335"/>
-        <TextBlock x:Name="tbRealizadoMultiCore" Canvas.Left="353" Canvas.Top="158" Text="0" TextWrapping="Wrap" Width="338"/>
+
+        <TextBlock Canvas.Left="10" Canvas.Top="4" Text="Single Core (fila unica)" TextWrapping="Wrap" FontWeight="Bold"/>
+        <TextBlock Canvas.Left="352" Canvas.Top="4" TextWrapping="Wrap" FontWeight="Bold"><Run Language="pt-br" Text="Multi"/><Run Text=" Core ("/><Run Language="pt-br" Text="Varios ao mesmo tempo"/><Run Text=")"/></TextBlock>
+
+        <ListView x:Name="lvItensSingleCore" Height="143" Width="338" Canvas.Left="10" Canvas.Top="20" />
+        <ListView x:Name="lvItensMultiCore" Height="143" Width="338" Canvas.Left="353" Canvas.Top="20" />
+        <TextBlock x:Name="tbRealizadoSingleCore" Canvas.Left="13" Canvas.Top="168" Text="0" TextWrapping="Wrap" Width="335"/>
+        <TextBlock x:Name="tbRealizadoMultiCore" Canvas.Left="353" Canvas.Top="168" Text="0" TextWrapping="Wrap" Width="338"/>
         <ListView x:Name="lvResultado" Height="317" Width="685" Canvas.Left="8" Canvas.Top="230" />
 
-        <Button Name="btCarregaBanco" Content="1 - simula Banco" ToolTip="Carrega 100 itens como se fosse bando de dados" Canvas.Left="8" Canvas.Top="205" Width="124" Click="btCarregaBanco_Click"/>
-        <Button Name="btIniciaProcessamento" Content="2 - Inicia FILA" ToolTip="Inicia as 2 filas para processar o que gerou na etapa 1" Canvas.Left="137" Canvas.Top="205" Width="124" Click="btIniciaProcessamento_Click"/>
-        <Button x:Name="btExibeResult" Content="3 - Exibe banco" ToolTip="Apos processar a fila (2 lists de cima vazios) pode mandar ver o resultado." Canvas.Left="266" Canvas.Top="205" Width="124" Click="btExibeResult_Click"/>
+        <Button Name="btCarregaBanco" Content="1 - simula Banco" ToolTip="Carrega 100 itens como se fosse bando de dados" Canvas.Left="8" Canvas.Top="195" Width="124" Click="btCarregaBanco_Click" Height="30"/>
+        <Button x:Name="btExibeResult" Content="3 - Exibe banco" ToolTip="Apos processar a fila (2 lists de cima vazios) pode mandar ver o resultado." Canvas.Left="137" Canvas.Top="195" Width="134" Click="btExibeResult_Click" Height="30"/>
+        
+        
     </Canvas>
 </Window>
