--- a/wpfQueue/MainWindow.xaml
+++ b/wpfQueue/MainWindow.xaml
@@ -15,11 +15,12 @@
         <ListView x:Name="lvItensMultiCore" Height="143" Width="338" Canvas.Left="353" Canvas.Top="20" />
         <TextBlock x:Name="tbRealizadoSingleCore" Canvas.Left="13" Canvas.Top="168" Text="0" TextWrapping="Wrap" Width="335"/>
         <TextBlock x:Name="tbRealizadoMultiCore" Canvas.Left="353" Canvas.Top="168" Text="0" TextWrapping="Wrap" Width="338"/>
-        <ListView x:Name="lvResultado" Height="317" Width="685" Canvas.Left="8" Canvas.Top="230" />
+        <ListView x:Name="lvResultadoSingle" Height="317" Width="340" Canvas.Left="8" Canvas.Top="230" />
+        <ListView x:Name="lvResultadoMulti" Height="317" Width="340" Canvas.Left="353" Canvas.Top="230" />
 
         <Button Name="btCarregaBanco" Content="1 - simula Banco" ToolTip="Carrega 100 itens como se fosse bando de dados" Canvas.Left="8" Canvas.Top="195" Width="124" Click="btCarregaBanco_Click" Height="30"/>
         <Button x:Name="btExibeResult" Content="3 - Exibe banco" ToolTip="Apos processar a fila (2 lists de cima vazios) pode mandar ver o resultado." Canvas.Left="137" Canvas.Top="195" Width="134" Click="btExibeResult_Click" Height="30"/>
-        
-        
+
+
     </Canvas>
 </Window>
